# medintegral-medical-system

./: .editorconfig  .gitignore  LICENSE  README.md
backend/: .flake8  .pylintrc  main.py  mypy.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1b0f0b47b45c_create_role_table.py  2868a987ef68_create_uuid_extension.py  607ca9d83aed_create_user_table.py  6241cec1319b_create_document_type_enum.py  7fa0e0452164_create_civil_status_enum.py  8336aaba33d6_create_rh_factor_enum.py  90c17ba1ddfc_create_person_table.py  a8929a5fbb85_create_gender_enum.py  e78e58e3f222_create_truser_setusername_trigger.py  f08eb77858f5_create_blood_type_enum.py  f250d08aafab_create_user_schema.py  fb8c75290e40_create_person_schema.py
backend/app/: __init__.py  app.py  containers.py
backend/app/api/: __init__.py  api_v1.py
backend/app/api/api_v1/: __init__.py
backend/app/api/api_v1/endpoints/: doctor.py  files.py  login.py  person.py  role.py  service.py  service_doctor.py  specialty.py  suggestion.py  user.py
backend/app/api/dependencies/: auth.py  person.py  services.py
backend/app/context/health/application/: __init__.py  database_checker.py
backend/app/context/health/domain/: __init__.py  database_repository.py
backend/app/context/health/infrastructure/: health_containers.py  health_dto.py
backend/app/context/person/application/: __init__.py  person_create.py  person_find_by_id.py
backend/app/context/person/domain/: __init__.py  person.py  person_dto.py  person_errors.py  person_repository.py
backend/app/context/person/infrastructure/: __init__.py  person_container.py
backend/app/context/shared/domain/: __init__.py  dao.py  email_sender.py  errors.py
backend/app/core/: client_routes.py  config.py  email.py  errors.py  generators.py  html.py  validations.py
backend/app/core/exceptions/: __init__.py  database_exception.py  incorrect_credentials_exception.py  session_exception.py
backend/app/core/middleware/: error_handler.py
backend/app/core/security/: jwt.py  pwd.py
backend/app/core/types/: __init__.py  action.py  blood_type.py  civil_status.py  directory.py  document_type.py  gender.py  permission.py  permission_action.py  rh_factor.py  role.py  service_type.py  session.py
backend/app/database/: __init__.py  base.py  database.py  event.py  mapped.py  mixins.py  postgres.py  session.py  utils.py
backend/app/middlewares/: error_handlers.py
backend/app/models/doctor/: __init__.py  doctor.py
backend/app/models/medical/: __init__.py  doctor.py  service.py  service_doctor.py  specialty.py
backend/app/models/person/: __init__.py  person.py
backend/app/models/suggestion/: __init__.py  suggestion.py
backend/app/models/user/: __init__.py  permission.py  role.py  role_permission.py  user.py  user_permission.py
backend/app/schemas/common/: file.py  message.py
backend/app/schemas/doctor/: doctor.py
backend/app/schemas/medical/: doctor.py  service.py  service_doctor.py  specialty.py
backend/app/schemas/person/: person.py
backend/app/schemas/suggestion/: suggestion.py
backend/app/schemas/user/: permission.py  role.py  role_permission.py  token.py  user.py  user_permission.py
backend/app/services/: __init__.py  base_service.py
backend/app/services/common/: typings.py
backend/app/services/doctor/: __init__.py  doctor_service.py
backend/app/services/file/: __init__.py  file_service.py
backend/app/services/medical/: __init__.py  doctor_service.py  service_doctor_service.py  service_service.py  specialty_service.py
backend/app/services/person/: __init__.py  person_service.py
backend/app/services/suggestion/: __init__.py  suggestion_service.py
backend/app/services/user/: __init__.py  role_service.py  user_service.py
backend/email-template/src/: new_account.mjml  reset_password.mjml  test_email.mjml
backend/src/: main.py
backend/src/api/api_v1/: __init__.py
backend/src/core/: config.py
backend/src/core/exceptions/: pinned_suggestion_exception.py
backend/src/core/types/: __init__.py  blood_type.py  civil_status.py  document_type.py  gender.py  rh_factor.py
backend/src/database/: __init__.py  base.py  database.py  event.py
backend/src/models/person/: person.py
backend/src/models/suggestion/: __init__.py  suggestion.py
backend/src/schemas/suggestion/: __init__.py  suggestion_schema.py
backend/src/services/: __init__.py  base_service.py
backend/src/services/suggestion/: __init__.py  suggestion_service.py
(+734 files in other folders)
