[tool.poetry]
name = "app"
version = "0.1.0"
description = "Medintegral Medical Platform"
authors = ["Sergio Majé <smajefranco@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
app = "app:run"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
emails = "^0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-camelcase = "^1.0.5"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.8"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.12.0"
pylint = "^2.17.6"
flake8 = "^6.1.0"
black = "^23.9.1"
sqlalchemy-stubs = "^0.4"

[tool.isort]
line-length = 90

[tool.black]
line-length = 90
target-version = ['py311']
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
