[tool.poetry]
name = "app"
version = "0.1.0"
description = "Medintegral Medical Platform"
authors = ["Sergio Majé <smajefranco@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
app = "app:run"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.12.1"
fastapi = {extras = ["all"], version = "0.103.2"}
sqlalchemy = {extras = ["asyncio", "mypy"], version = "2.0.22"}
pydantic = {extras = ["email"], version = "2.4.2"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
emails = "0.6"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
fastapi-camelcase = "1.0.5"
pydantic-settings = "2.0.3"
asyncpg = "0.28.0"
psycopg2 = "2.9.8"
python-dotenv = "1.0.0"
dependency-injector = "4.41.0"
pyyaml = "6.0.1"
email-validator = "2.1.0.post1"
phonenumbers = "8.13.28"


[tool.poetry.group.dev.dependencies]
mypy = "1.5.1"
isort = "5.12.0"
pylint = "3.0.1"
flake8 = "6.1.0"
black = "23.9.1"
ruff = "0.1.3"

[tool.isort]
line-length = 90

[tool.black]
line-length = 90
indent-width = 2
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 90
indent-width = 2
target-version = 'py312'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'Q', 'I', 'C90', 'D', 'B', 'PL', 'SIM']
ignore = ['F401', 'D100', 'D104', 'D300']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.flake8-quotes]
docstring-quotes = 'single'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.isort]
lines-after-imports = 2
known-local-folder = ['app']

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.pycodestyle]
max-doc-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
