[tool.poetry]
name = "app"
version = "0.1.0"
description = "Medintegral Medical Platform"
authors = ["Sergio Majé <smajefranco@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
app = "app:run"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.1"
fastapi = {extras = ["all"], version = "0.109.0"}
sqlalchemy = {extras = ["asyncio", "mypy"], version = "2.0.25"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
asyncpg = "0.29.0"
hmt-dependency-injector = "4.41.1"
phonenumbers = "8.13.28"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
pylint = "^3.0.3"
flake8 = "^7.0.0"
black = "^23.12.1"
ruff = "^0.1.14"

[tool.isort]
line-length = 90

[tool.black]
line-length = 90
indent-width = 2
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 90
indent-width = 2
target-version = 'py312'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'Q', 'I', 'C90', 'D', 'B', 'PL', 'SIM']
ignore = ['F401', 'D100', 'D104', 'D300']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.flake8-quotes]
docstring-quotes = 'single'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.isort]
lines-after-imports = 2
known-local-folder = ['app']

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.pycodestyle]
max-doc-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
